--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Boxer</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -49,13 +49,13 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>njatomiarintsoawilliam@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>NJATOMIARINTSOA William</span>
                   </a>
                 </li>
               </ul>
