--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Oxer</title>
+  <title>Boxer</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -43,19 +43,19 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/telephone.png" alt="" />
-                    <span> +01 1234567890</span>
+                    <span> +26134 82 357 30 </span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>njatomiarintsoawilliam@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
                   <a class="" href="">
                     <img src="images/location.png" alt="" />
-                    <span>Den mark Loram ipusum</span>
+                    <span>NJATOMIARINTSOA William</span>
                   </a>
                 </li>
               </ul>
