center en boxer

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="detail-box">
                       <h1>
                         Boxing <br />
-                        Center
+                        Boxer
                       </h1>
                       <hr />
                       <div class="btn-box">
